--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.mwiktorin.solarstats"
-    android:versionCode="7"
-    android:versionName="1.04.1" >
+    android:versionCode="8"
+    android:versionName="1.04.2" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -13,7 +13,9 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- removed because i have no privacy policy
     <uses-permission android:name="android.permission.CAMERA" />
+    -->
     <!-- 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
